--- a/index.html
+++ b/index.html
@@ -1,37 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Book Shelf</title>
-    <link rel="stylesheet" href="src/styles/css/index.css" />
-    <link
-      rel="shortcut icon"
-      href="src/images/favicon.png"
-      type="image/x-icon"
-    />
-  </head>
-  <body>
-    <header>
-      <img src="src/images/brand.svg" alt="app brand" height="48px"> 
-      <div class="actions">
-        <div class="shelf-selector">
-          <label class="readed-option">
-            <input type="radio" name="shelf-selector" id="readed">
-            <span>Selesai dibaca</span>
-          </label>
-          <label class="unreaded-option">
-            <input type="radio" name="shelf-selector" id="unreaded">
-            <span>Belum Selesai Dibaca</span>
-          </label>
-        </div>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Book Shelf</title>
+  <link rel="stylesheet" href="src/styles/css/index.css" />
+  <link rel="shortcut icon" href="src/images/favicon.png" type="image/x-icon" />
+</head>
+
+<body>
+  <header>
+    <img src="src/images/brand.svg" alt="app brand" height="48px">
+    <div class="actions">
+      <div class="shelf-selector">
+        <label class="readed-option">
+          <input type="radio" checked name="shelf-selector" id="readed">
+          <div>Selesai Dibaca</div>
+        </label>
+        <label class="unreaded-option">
+          <input type="radio" name="shelf-selector" id="unreaded">
+          <div>Belum Selesai Dibaca</div>
+        </label>
       </div>
+      <div class="form">
+        <button class="btn btn-primary" id="add-book">Tambah buku</button>
+        <label class="search-input-container">
+          <svg xmlns="http://www.w3.org/2000/svg" width="18" height="19" viewBox="0 0 18 19" fill="none">
+            <path
+              d="M8.25 14.75C11.5637 14.75 14.25 12.0637 14.25 8.75C14.25 5.43629 11.5637 2.75 8.25 2.75C4.93629 2.75 2.25 5.43629 2.25 8.75C2.25 12.0637 4.93629 14.75 8.25 14.75Z"
+              stroke="#6B7280" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+            <path d="M15.75 16.25L12.4875 12.9875" stroke="#6B7280" stroke-width="2" stroke-linecap="round"
+              stroke-linejoin="round" />
+          </svg>
+          <input type="search" name="search" id="search-input" placeholder="Cari berdasarkan judul">
+
+        </label>
+      </div>
+    </div>
     <main>
       <h1>Hello World</h1>
-
+      <select name="fruit" id="fruit-select">
+        <option value="apple">Apple</option>
+        <option value="orange">Orange</option>
+        <option value="banana">Banana</option>
+      </select>
     </main>
     <footer></footer>
     <script src="src/scripts/js/index.js" type="module"></script>
-  </body>
+</body>
+
 </html>
