--- a/index.html
+++ b/index.html
@@ -15,17 +15,17 @@
     <img src="src/images/brand.svg" alt="app brand" height="48px">
     <div class="actions">
       <div class="shelf-selector">
-        <label class="readed-option">
-          <input type="radio" checked name="shelf-selector" id="readed">
+        <label class="finished-read-option">
+          <input type="radio" checked name="shelf-selector" id="finished-read">
           <div>Selesai Dibaca</div>
         </label>
-        <label class="unreaded-option">
-          <input type="radio" name="shelf-selector" id="unreaded">
+        <label class="unfinished-read-option">
+          <input type="radio" name="shelf-selector" id="unfinished-read">
           <div>Belum Selesai Dibaca</div>
         </label>
       </div>
       <div class="form">
-        <button class="btn btn-primary" id="add-book">Tambah buku</button>
+        <button class="button button-primary" id="add-book-button">Tambah buku</button>
         <label class="search-input-container">
           <svg xmlns="http://www.w3.org/2000/svg" width="18" height="19" viewBox="0 0 18 19" fill="none">
             <path
@@ -35,20 +35,35 @@
               stroke-linejoin="round" />
           </svg>
           <input type="search" name="search" id="search-input" placeholder="Cari berdasarkan judul">
-
         </label>
       </div>
+      <div class="alert hidden" data-theme="danger">
+        <p class="message">Buku Laskar Pelangi karya Tere Liye yang terbit tahun 2008 sudah ada di rak. Tidak bisa
+          menduplikat data!</p>
+        <button class="close-button">
+          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-x"
+            viewBox="0 0 16 16">
+            <path
+              d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708z" />
+          </svg>
+        </button>
+      </div>
     </div>
-    <main>
-      <h1>Hello World</h1>
-      <select name="fruit" id="fruit-select">
-        <option value="apple">Apple</option>
-        <option value="orange">Orange</option>
-        <option value="banana">Banana</option>
-      </select>
-    </main>
-    <footer></footer>
-    <script src="src/scripts/js/index.js" type="module"></script>
+  </header>
+  <main>
+    <ul class="book-list">
+      <!-- Content rendered via JS -->
+    </ul>
+    <div id="modal-container" class="hidden">
+    </div>
+  </main>
+  <!-- Modals -->
+  <!-- Add Book -->
+  <!-- End Modals -->
+  <footer>
+    © Copyright (C) 2022. Created by Eko Susilo
+  </footer>
+  <script src="./src/scripts/js/index.js" type="module"></script>
 </body>
 
 </html>
