--- a/index.html
+++ b/index.html
@@ -37,21 +37,12 @@
           <input type="search" name="search" id="search-input" placeholder="Cari berdasarkan judul">
         </label>
       </div>
-      <div class="alert hidden" data-theme="danger">
-        <p class="message">Buku Laskar Pelangi karya Tere Liye yang terbit tahun 2008 sudah ada di rak. Tidak bisa
-          menduplikat data!</p>
-        <button class="close-button">
-          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-x"
-            viewBox="0 0 16 16">
-            <path
-              d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708z" />
-          </svg>
-        </button>
+      <div id="alert-container" class="hidden">
       </div>
     </div>
   </header>
   <main>
-    <ul class="book-list">
+    <ul id="book-list">
       <!-- Content rendered via JS -->
     </ul>
     <div id="modal-container" class="hidden">
